[gd_scene load_steps=3 format=3 uid="uid://cqje5aaty2dw1"]

[ext_resource type="Script" uid="uid://bcwora42ia56k" path="res://scripts/ui/shop_panel.gd" id="1_0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.7, 0.7, 0.7, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ShopPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_0")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(0.6, 0.6, 0.6, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -200.0
offset_right = 180.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="Panel/Margin/VBox"]
layout_mode = 2
text = "Магазин"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="Panel/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Апгрейды" type="VBoxContainer" parent="Panel/Margin/VBox/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="UpgradeStats" type="ScrollContainer" parent="Panel/Margin/VBox/TabContainer/Апгрейды"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Margin/VBox/TabContainer/Апгрейды/UpgradeStats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="Panel/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Закрыть"
